# jwt-signer

./: Cargo.toml  flake.nix
.github/workflows/: tag.yml
containers/: default.nix
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config.rs  main.rs
crates/cli/src/commands/: key.rs  server.rs  token.rs
crates/http/: Cargo.toml
crates/http/src/: auth.rs  error.rs  lib.rs
flake-parts/: cargo.nix  ci.nix  formatting.nix  pre-commit.nix  rust-toolchain.nix  shells.nix
